--- a/crt/index.html
+++ b/crt/index.html
@@ -11,7 +11,7 @@
         <div id="question-container">
             <img id="question-image" src="" alt="Question Image">
             <div id="image-container">  
-                <img src="your-image.jpg" alt="Answer Image" id="Answer-image">  
+                <img id="image" src="your-image.jpg" alt="Answer Image" id="Answer-image">  
             </div>
             <!--
             <div class="choice" data-answer="A"></div>  
