--- a/crt/index.html
+++ b/crt/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">  
 </head>  
 <body>  
-    <div id="quiz-container">  
+    <div id="quiz-container">
         <div id="question-container">
+            <div id="counter" 0></div>
             <img id="question-image" src="" alt="Question Image">
             <div id="image-container">  
                 <img src="your-image.jpg" alt="Answer Image" id="Answer-image">  
@@ -19,8 +20,9 @@
             <div class="choice" data-answer="C"></div>  
             <div class="choice" data-answer="D"></div>
             -->
-        </div>  
-        <button id="next-btn">Next Question</button>  
+        </div>
+        <button id="prev-btn">上一题</button>
+        <button id="next-btn">下一题</button>
     </div>  
   
     <script src="script.js"></script>  
