--- a/crt/index.html
+++ b/crt/index.html
@@ -6,7 +6,7 @@
     <title>CRT test</title>  
     <link rel="stylesheet" href="styles.css">  
 </head>  
-<body>  
+<body oncontextmenu='return false' ondragstart='return false' onselectstart ='return false' onselect='document.selection.empty()' oncopy='document.selection.empty()' onbeforecopy='return false'>  
     <div id="quiz-container">
         <div id="question-container">
             <div id="counter" 0></div>
